--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ b {
 
 a {
   transition: all 0.3s;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 a:hover {
@@ -42,7 +42,7 @@ body {
 }
 
 .wholepage {
-  width: 1200px;
+  width: 1000px;
   margin: 0px auto;
 }
 
@@ -77,8 +77,8 @@ body {
 }
 .menu a{
   text-decoration: none;
-  font-size: 9px;
-  line-height: 15px;
+  font-size: 0.55rem;
+  line-height: 13px;
   text-align: center;
   display: block;
 }
@@ -104,27 +104,27 @@ body {
 
 .intro-container p {
   text-align: center;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
   line-height: 25px;
   margin: 20px;
 }
 
 .gameTitle {
   color: #b02226;
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: center;
   margin-bottom: 80px;
 }
 
 .gameSubTitle {
   color: #b02226;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   margin-top: 80px;
 }
 
 .gameDescription {
   text-align: center;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   line-height: 25px;
   margin-top: 20px;
   margin-bottom: 20px;
@@ -139,13 +139,13 @@ body {
 
 .carousel {
   display: grid;
-  grid-template-columns: 40px 1120px 40px;
+  grid-template-columns: 40px var(--carousel-width) 40px;
   margin: 80px auto;
   align-items: center;
 }
 
 .carousel>div {
-  width: 1120px;
+  width: var(--carousel-width);
   overflow-x: hidden;
 }
 
@@ -289,7 +289,7 @@ body.active-modal {
 
 .modal-content p {
   color: white;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   line-height: 25px;
 }
 
